--- a/src/index.css
+++ b/src/index.css
@@ -152,6 +152,7 @@ header {
     cursor: pointer;
     height: 0;
     width: 0;
+
 }
 
 
@@ -166,6 +167,7 @@ header {
     background-color: #eee;
     border-radius: 1rem;
     border: 2px solid #518cf2;
+
 }
 
 
@@ -260,11 +262,15 @@ header {
 .darkMode {
     color: #eee;
     background: #121212;
+    min-height: 600px;
 }
 
 .darkMode a {
     color: #809fff
 }
+
+.checkDarkMode{
+    margin-left: 20px;}
 
 .noTaskLeft {
     max-width: 100%;
