--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,20 @@ header {
     margin-left: 1rem;
 }
 
+input[type="submit"] {
+    font-size: 1rem;
+    width: fit-content;
+    color: #518cf2;
+    border-color: #518cf2;
+    border-radius: 0.8rem;
+    padding: 0.4rem;
+    background-color: transparent;
+}
+
+div.taskItem form {
+    display: contents;
+}
+
 .icon:last-child {
     margin-right: 0;
     margin-left: 0;
@@ -134,7 +148,6 @@ header {
 .save {
     background-image: url(./assets/icons/save_icon.svg);
 }
-
 
 
 /* The container */
